# SigContrastFastAviUtl

./: .gitignore  .gitmodules  LICENSE  README.md  SigColorFastAviUtl.sln
SigColorFastAviUtl/: Histogram.cpp  Histogram.h  LUT.cpp  LUT.h  RSigmoidTable.cpp  RSigmoidTable.h  RSigmoidTable.hpp  SigColorFastAviUtl.rc  SigColorFastAviUtl.vcxproj  SigColorFastAviUtl.vcxproj.filters  SigmoidTable.cpp  SigmoidTable.h  SigmoidTable.hpp  analyzer.hpp  color_cvt.hpp  filter.h  filter_helper.hpp  inferior_iota_view.hpp  macro.props  math.hpp  sigcolorfastaviutl.cpp  sigmoid.hpp  std_future.hpp  thread.hpp  time_logger.hpp  version.h  window_title_manager.hpp
test/: CMakeLists.txt  LUT.cpp  LUT.h  RSigmoidTable.cpp  RSigmoidTable.h  SigmoidTable.cpp  SigmoidTable.h  analyzer.hpp  random.cpp  random.hpp  test.cpp  test.vcxproj  test.vcxproj.filters
